@@ -3,6 +3,7 @@ Changes from 1.7.2 to 1.7.4
 
 ** Bug
     * [FELIX-2963] - scr annotations @Activate @Deactivate @Modified are not detected with class inheritance
+    * [FELIX-3117] - NullPointerException when not implementing interface that is defined with @Service
 
 ** Improvement
     * [FELIX-3066] - Add support for source directory include filter via plugin configuration
